before webpack problem

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -9,3 +9,4 @@ SMTP_PASSWORD="nvrwcwvdcsljrgdx"
 CLOUDNERY_API=931135133896772
 CLOUDNERY_APISECRET=VE4YE0LXRUYg4p1ks-S3-B4Ucfs
 CLOUDNERY_CLOUD=dgpk08gxo
+FRONTEND_URL="http://localhost:3000"
