--- a/frontendn/package.json
+++ b/frontendn/package.json
@@ -53,17 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.56.1:4000",
-  "devDependencies": {
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0"
-  }
+  "proxy": "http://192.168.56.1:4000"
 }
