--- a/frontendn/package.json
+++ b/frontendn/package.json
@@ -59,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.56.1:4000"
+  "proxy": "https://amazonbackend-ieyp.onrender.com"
 }
