--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/app.js",
-    "dev": "nodemon backend/app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Saubhagya Senapati",
   "license": "ISC",
